--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Chess 0</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <title>Simply Chess</title>
   <!--  Including the chessboardjs files:-->
   <!-- <script src="chess.js"></script>  -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -33,7 +35,7 @@
 
 </head>
 
-<body>
+<body class="bg-dark pt-4">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -41,33 +43,38 @@
   <!-- <script>
     var socket = io();
   </script> -->
-  <div class="container">
-    <div id="board" style="width: 500px; margin: auto"></div>
 
-    <div style="margin: auto">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+    <a class="navbar-brand" href="#" onclick="location.reload()">Simply Chess</a>
 
-      <div id="player"></div>
-      <div id="roomNumbers">Enter a room number between 0 and 99</div>
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-item nav-link text-light" href="#" onclick="location.reload()">Home</a>
+      </li>
+    </ul>
+  </nav>
+
+  <div class="jumbotron">
+    <div class="container">
       <form>
-        <div class="row">
-          <div class="col">
-            <input type="number" id="room" min="0" max="99" class="form-control form-control-md number">
-          </div>
-          <div class="col">
-            <button id="button" class="btn btn-success" onclick="connect()">Connect</button>
+        <div class="form-group">
+          <label class="font-weight-bold m-0 mb-2" id="roomNumbers" for="room">Enter a room number between 0 and 99</label>
+          <div class="input-group">
+            <input type="number" id="room" min="0" max="99" class="form-control">
+            <div class="input-group-append">
+              <button id="button" class="btn btn-success" type="button" onclick="connect()">Connect</button>
+            </div>
           </div>
         </div>
       </form>
 
-      <div id="state">Join Game</div>
+      <div id="board" style="width: 500px; margin: auto"></div>
+      <p class="mt-4 mb-1" id="player"></p>
+      <p class="mt-1" id="state"></p>
+      <button id="inputSpeech" class="btn btn-success" onclick="inputSpeech()">Talk</button>
     </div>
-
   </div>
-
-  <button id="inputSpeech" class="btn btn-success" onlick="inputSpeech()">Talk</button>
-
   <script src="./game.js"></script>
-
 </body>
 
 
