added several sound cues

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
       </form>
 
-      <div id="board" style="width: 500px; margin: auto"></div>
+      <div aria-hidden="true" id="board" style="width: 500px; margin: auto"></div>
       <p class="mt-4 mb-1" id="player"></p>
       <p class="mt-1" id="state"></p>
       <button id="inputSpeech" class="btn btn-success" onclick="inputSpeech()">Talk</button>
