--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
       <div aria-hidden="true" id="board" style="width: 500px; margin: auto"></div>
       <p class="mt-4 mb-1" id="player"></p>
       <p class="mt-1" id="state"></p>
-      <button id="inputSpeech" class="btn btn-success" onclick="inputSpeech()">Talk</button>
+      <button id="inputSpeech" class="btn btn-success btn-lg" onclick="inputSpeech()">Talk</button>
+      <button id="getHistory" class="btn btn-success btn-lg d-none" onclick="getHistory()">Move History</button>
     </div>
   </div>
   <script src="./game.js"></script>
