--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <p class="mt-4 mb-1" id="player"></p>
       <p class="mt-1" id="state"></p>
       <button id="inputSpeech" class="btn btn-success btn-lg" onclick="inputSpeech()"><i class="fas fa-microphone"></i> Talk</button>
-      <button id="getHistory" class="btn btn-success btn-lg d-none" onclick="getHistory()">Move History</button>
+      <button id="getHistory" class="btn btn-success btn-lg d-none" onclick="getHistory()"><i class="fas fa-history"></i> Move History</button>
       
     </div>
 
