Updated FAQ for voice input help
Voice input help includes an example now.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
           To make a move, start by hovering your mouse over any chess piece. <br>
           By hovering, you can see the possible moves of pieces that are allowed to be moved, highlighted in gray on the board spaces.<br>
           Once you have decided what piece to move and where, make that selection by dragging and dropping that piece to its new space. <br>
-          Control will change over to the other player after a move has been made.
+          Control will change over to the other player after a move has been made.<br><br>
+
+          After every move, the piece that was moved and its current space on the board is read aloud.
         </p>
       </div>
 
@@ -121,9 +123,12 @@
           Moves made by voice input are done by addressing <strong>SPACES</strong> on the chessboard. <br>
           When the talk button is activated, say the space that the piece is currently on, 
           followed by the space you would like it to go to. <br>
-          For example, to move a pawn at the beginning of the game, press the talk button and say, <strong>""</strong>.<br>
-          The game will recognize your input and move the piece accordingly. If your move is invalid, you will hear <strong>""</strong>. <br>
-          To try again, press the talk button and say your move.
+          For example, to move a pawn at the beginning of the game, press the talk button and say, <strong>"C2 C3"</strong>.<br>
+          The game will recognize your input, repeat it back to you, and move the piece accordingly. <br>
+          If your move is invalid, you will hear <strong>"ILLEGAL MOVE"</strong>. <br>
+          To try again, press the talk button and say your move.<br><br>
+
+          After every move, the piece that was moved and its current space on the board is read aloud.
         </p>
       </div>
   
