--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
     </div>
   </div>
   </section>
+
+  <!-- FOOTER -->
+  <footer class="bg-primary text-white text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      Made with <i class="fas fa-heart"></i> by the SimplyChess Team: Hunter Devlin, Justin Ho, D'Antoine Newsome, Shaunak Saklikar, and Mark Watson. <br>
+      <img src="Stevens-Primary-Logo-2020_WHT.svg" height="80" width="200" alt="Stevens Institute of Technology Logo WHT">| &nbsp; Fall 2021 CS 545 Project
+    </div>
+    <!-- Copyright -->
+  </footer>
   <script src="./game.js"></script>
 </body>
 
