info on Z button

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <h6 class="mb-3 text-primary"><i class="fas fa-microphone-alt"></i> Making a Move Using Your Voice</h6>
         <p>
           Moves made by voice input are done by addressing <strong>SPACES</strong> on the chessboard. <br>
-          When the talk button is activated, say the space that the piece is currently on, 
+          When the talk button is activated or the Z key is pressed on your keyboard, say the space that the piece is currently on, 
           followed by the space you would like it to go to. <br>
           For example, to move a pawn at the beginning of the game, press the talk button and say, <strong>"C2 C3"</strong>.<br>
           The game will recognize your input, repeat it back to you, and move the piece accordingly. <br>
