--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </script> -->
 
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-    <a class="navbar-brand" href="#" onclick="location.reload()">Simply Chess</a>
+    <a class="navbar-brand" href="#" onclick="location.reload()">SimplyChess</a>
 
     <ul class="nav">
       <li class="nav-item active">
@@ -67,7 +67,7 @@
         <div class="form-group">
           <label class="font-weight-bold m-0 mb-2" id="roomNumbers" for="room">Enter a room number between 0 and 99</label>
           <div class="input-group">
-            <input type="number" id="room" min="0" max="99" class="form-control">
+            <input type="number" id="room" min="0" max="99" class="form-control" value="0">
             <div class="input-group-append">
               <button id="button" class="btn btn-success" type="button" onclick="connect()">Connect</button>
             </div>
@@ -145,7 +145,7 @@
         <h6 class="mb-3 text-primary"><i class="far fa-comments" href="https://github.com/Shaunak1857/SimplyChess/issues"></i> Issues?
         </h6>
         <p>If you have any issues playing the game,  or would like to provide feeback on how to make this game better,
-          simply press the <a href="https://github.com/Shaunak1857/SimplyChess/issues"target="_blank" rel="noopener noreferrer"><strong>HELP</strong></a> button at the top of the page.</p>
+          simply press the <a href="https://github.com/Shaunak1857/SimplyChess/issues"target="_blank" rel="noopener noreferrer"><strong>FEEDBACK</strong></a> button at the top of the page.</p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
